// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`body.js - {"spaceInParens":true} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
spaceInParens: true
                                                                                | printWidth
=====================================input======================================
with (a);
if (1); else if (2); else;
for (;;);
while (1);
for (var i in o);
for (var i of o);
do; while(1);

=====================================output=====================================
with ( a );
if ( 1 );
else if ( 2 );
else;
for (;;);
while ( 1 );
for ( var i in o );
for ( var i of o );
do;
while ( 1 );

================================================================================
`;

exports[`no-newline.js - {"spaceInParens":true} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
spaceInParens: true
                                                                                | printWidth
=====================================input======================================
if (a) {
  b;


  ;
}

=====================================output=====================================
if ( a ) {
  b;
}

================================================================================
`;
